# manga-sync

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  entrypoint.sh  openapi.yml
migrations/: 001_initial.sql  20231229000000_initial_schema.sql  20260104134854_add_cascade_to_website.sql  20260117000000_add_external_manga_id_to_source.sql  20260117000001_add_number_unread_chapter_to_source.sql  20260120000000_add_default_settings.sql
src/: auth.rs  db.rs  lib.rs  main.rs  models.rs  openapi.rs  settings.rs  state.rs
src/auth/: key_manager.rs  key_manager_tests.rs  middleware.rs  mod.rs
src/cache/: mod.rs
src/db/: mod.rs
src/handlers/: key.rs  manga.rs  mod.rs  setting.rs  source.rs  website.rs
src/models/: chapter.rs  manga.rs  mod.rs  pagination.rs  setting.rs  source.rs  website.rs
src/routes/: manga.rs  setting.rs  website.rs
src/sync/: http_client.rs  mod.rs  scheduler.rs  service.rs  strategy.rs
src/sync/strategies/: mangabuddy_com.rs  mangaread_org.rs  mod.rs
src/utils/: response.rs
tests/: auth_tests.rs  db_tests.rs  delete_tests.rs  integration_tests.rs  source_tests.rs  sync_tests.rs
tests/routes/: manga_tests.rs  setting_tests.rs  website_tests.rs
