[package]
name = "manga-sync"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "manga-sync"
path = "src/main.rs"

[dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.9.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1.0"
tower = "0.5.2"
utoipa = { version = "5.4.0", features = ["yaml", "chrono"] }
reqwest = { version = "0.13.1", features = ["json", "cookies"] }
scraper = "0.25.0"
tokio-cron-scheduler = "0.15.1"
async-trait = "0.1"
regex = "1"
moka = { version = "0.12", features = ["future"] }
tower-http = { version = "0.6.8", features = ["trace"] }
